--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <h1>Зарегистрироваться</h1>
+    <h1 class="register-header">Зарегистрироваться</h1>
     <div id="choose-form-block" class="block-register hiddable">
       <div class="card index-register-card">
         <img class="img-female" src="img/index-woman.svg" />
@@ -26,10 +26,7 @@
     </div>
 
     <div id="form-1-block" class="card form-card-universal hiddable hidden">
-      <button
-        class="form-block-cross"
-        onclick="showElement('choose-form-block')"
-      >
+      <button class="form-block-cross" onclick="handleFormExit()">
         <img src="img/cross.svg" />
       </button>
       <!-- ID формы должен быть в формате form-{formNumber}-form -->
@@ -96,10 +93,7 @@
       id="form-2-block"
       class="card form-card-universal form-2-card hiddable hidden"
     >
-      <button
-        class="form-block-cross"
-        onclick="showElement('choose-form-block')"
-      >
+      <button class="form-block-cross" onclick="handleFormExit()">
         <img src="img/cross.svg" />
       </button>
       <form id="form-2-form" class="form-1 form-2">
